--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,10 @@ body {
     max-height: 70vh;
 }
 
+.project-card.expanded .project-video ~ .project-thumbnail {
+    display: none;
+}
+
 .project-card.expanded .project-thumbnail img {
     width: 100%;
     height: 100%;
