--- a/styles_v2.css
+++ b/styles_v2.css
@@ -109,6 +109,7 @@ p{
 
 .hero-subtitle {
     font-size: 1.5rem;
+    font-family: var(--font-family-secondary);
     margin-bottom: 2rem;
     color: var(--tertiary-color-dark);
 }
