--- a/styles_v2.css
+++ b/styles_v2.css
@@ -138,35 +138,7 @@ p{
 .cta-button:hover {
     transform: translateY(-3px);
 }
-/*
-.hero-scroll {
-    position: absolute;
-    bottom: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
-}
 
-.scroll-indicator {
-    width: 30px;
-    height: 50px;
-    border: 2px solid var(--tertiary-color-light);
-    border-radius: 15px;
-    position: relative;
-}
-
-.scroll-indicator::before {
-    content: '';
-    width: 4px;
-    height: 8px;
-    background: var(--tertiary-color-light);
-    position: absolute;
-    left: 50%;
-    top: 8px;
-    transform: translateX(-50%);
-    border-radius: 2px;
-    animation: scrollIndicator 1.5s infinite;
-}
-*/
 /* Animations */
 @keyframes fadeInUp {
     from {
@@ -176,17 +148,6 @@ p{
     to {
         opacity: 1;
         transform: translateY(0);
-    }
-}
-
-@keyframes scrollIndicator {
-    0% {
-        transform: translate(-50%, 0);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(-50%, 20px);
-        opacity: 0;
     }
 }
 
@@ -316,11 +277,15 @@ p{
 
 .project-card.expanded .project-thumbnail h3 {
     margin: 2rem auto 1rem;
+    max-width: 800px;
 }
 .project-card.expanded .project-video ~ .project-thumbnail {
     display: none;
 }
-
+.project-card.expanded .project-description {
+    max-width: 800px;
+    margin: 0 auto;
+}
 .project-card.expanded .project-content {
     display: flex;
     max-width: 800px;
