--- a/styles_v2.css
+++ b/styles_v2.css
@@ -130,13 +130,11 @@ p{
     color: var(--background-color-light);
 }
 
-.cta-button.secondary {
-    background: var(--tertiary-color-light);
-    color: var(--background-color-light);
-}
 
 .cta-button:hover {
     transform: translateY(-3px);
+    background: var(--background-color-light);
+    color: var(--tertiary-color-light);
 }
 
 /* Animations */
@@ -272,6 +270,7 @@ p{
 .project-card.expanded .project-thumbnail img {
     width: 100%;
     height: 100%;
+    max-height: 80vh;
     object-fit: contain;
 }
 
